[package]
name = "wordle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wordle_solver"
path = "src/lib.rs"

[[bin]]
name = "wordle_solver"
path = "src/main.rs"

[dependencies]
itertools = "0.10.3"
float-ord = "0.3.2"
crossbeam = "0.8.1"
num_cpus = "1.13.1"
clap = { version = "3.1.2", features = ["derive"] }